Fix boardlist layout to scroll when overflow occurs

--- a/client/components/boards/boardsList.styl
+++ b/client/components/boards/boardsList.styl
@@ -49,7 +49,8 @@ html
 .board-list
   margin: 0 ($spaceBetweenTiles/2)
   padding: 30px;
-  max-height: 100%;
+  height: 87.7vh;
+  overflow:auto;
 
   li
     float: left
